RESOLVED FIXED133385
[Cocoa] Can’t recover from subframe load errors
https://bugs.webkit.org/show_bug.cgi?id=133385
Summary [Cocoa] Can’t recover from subframe load errors
mitz
Reported 2014-05-29 12:49:00 PDT
The client can’t respond to and recover from load errors in subframes.
Attachments
Add a WKNavigationDelegatePrivate method for subframe load errors (5.14 KB, patch)
2014-05-29 12:52 PDT, mitz
andersca: review+
mitz
Comment 1 2014-05-29 12:52:53 PDT
Created attachment 232261 [details] Add a WKNavigationDelegatePrivate method for subframe load errors
mitz
Comment 2 2014-05-29 13:02:18 PDT
Note You need to log in before you can comment on or make changes to this bug.