[Cocoa] Can’t recover from subframe load errors https://bugs.webkit.org/show_bug.cgi?id=133385

Reviewed by Anders Carlsson.

* UIProcess/API/Cocoa/WKNavigationDelegatePrivate.h: Declared new delegate method.
* UIProcess/Cocoa/NavigationState.h: Added flag in m_navigationDelegateMethods struct.
* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::setNavigationDelegate): Initialize
webViewNavigationDidFailProvisionalLoadInSubframeWithError flag in the delegate methods
struct.
(WebKit::NavigationState::LoaderClient::didFailProvisionalLoadWithErrorForFrame): If the
error occurred in a subframe, invoke the new delegate method.



Canonical link: https://commits.webkit.org/151410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169460 268f45cc-cd09-0410-ab3c-d52691b4dbfc